<resources>
    <string name="app_name">AGIG</string>
    <string name="search">Search....</string>
    <string name="add_new_category">Add New Category...</string>
    <string name="todo">TODO</string>
    <string name="category">Category</string>
    <string name="ask_something">Ask Something.....</string>
    <string name="question">Question</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="answer_the_question">Answer the Question...</string>
    <string name="answer">Answer</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hi_there">Hi, there</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="action_sign_in_short">Register</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Dont have an account? Sing up</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registrasi">Registrasi</string>


    <string name="banner_ad_unit_id">ca-app-pub-9093097207044911/1673664583</string>
    <string name="google_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="view_more">View More</string>
    <string name="title">Title</string>
    <string name="ina">INA</string>
    <string name="_0">0</string>
    <string name="nama_atlit">Nama Atlit:</string>
    <string name="nama_negara">Nama Negara:</string>
    <string name="chat">Chat</string>
    <string name="forum">Forum</string>
    <string name="destination">Destination</string>
    <string name="sport">Sport</string>
    <string name="athletes">Athletes</string>
    <string name="event">Event</string>
    <string name="medali">Medali</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="t">T</string>
    <string name="title_activity_maps">Map</string>
</resources>
