<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="250dp"
    android:background="@color/white"
    android:layout_margin="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_view1"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:src="@drawable/logo3"
            android:contentDescription="@string/todo" />

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_title1"
            android:text="@string/title"
            android:textColor="#000"
            android:textSize="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_date1"
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="#868686"
            android:textSize="5sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

</RelativeLayout>