<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/logo3"
            android:contentDescription="@string/todo" />

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_title"
            android:text="@string/title"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_date"
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="#868686"
            android:textSize="10sp"
            android:gravity="end"
            tools:ignore="SmallSp" />

    </LinearLayout>

</RelativeLayout>