<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".content.AnswerForumActivity">

    <include
        android:id="@+id/toolbar_answer_activity"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/layout_question"
        android:layout_below="@id/toolbar_answer_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#fff"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/images" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                android:id="@+id/text_view_name"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#868686"
                android:textSize="12sp"
                />

            <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                android:id="@+id/text_view_question"
                android:text="@string/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:textColor="#000"
                android:textSize="16sp"
                />

            <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                android:id="@+id/text_view_time"
                android:text="@string/time"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textColor="#868686"
                android:textSize="10sp"
                tools:ignore="RtlHardcoded,SmallSp" />

        </LinearLayout>

    </LinearLayout>

    <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
        android:id="@+id/answer"
        android:layout_below="@id/layout_question"
        android:text="@string/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#98a9b7"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_item_answer"
        android:layout_below="@id/answer"
        android:layout_above="@id/linear_layout_add_answer"
        android:layout_marginLeft="8dp"
        android:scrollbars="none"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:dividerHeight="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/linear_layout_add_answer"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:background="#fff"
        android:layout_height="50dp">

        <magang_2018.aseangamesindonesianguide.customfonts.EditText_Roboto_Regular
            android:id="@+id/edit_text_new_answer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/answer_the_question"
            android:textColorHint="#ced5db"
            android:minWidth="250dp"
            android:maxWidth="250dp"
            android:layout_marginStart="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/action_send_answer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_send"
                android:layout_marginStart="20dp"
                android:tint="#d9d9d9"
                android:background="#00000000"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>