<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="#fff"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/images" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_name"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#868686"
            android:textSize="12sp"
            />

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_answer"
            android:text="@string/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
            android:id="@+id/text_view_time"
            android:text="@string/time"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="#868686"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

    </LinearLayout>

</LinearLayout>