<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="5dp">

    <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
        android:id="@+id/text_view_name_country"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/ina"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="#616e7f"
        android:gravity="center_horizontal|center_vertical"
        />

    <ImageView
        android:id="@+id/image_country"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:layout_height="25dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_gold"
                android:src="@color/gold"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/todo"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_silver"
                android:src="@color/silver"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/todo"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_bronze"
                android:src="@color/bronze"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/todo"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                android:src="#fff"
                android:text="@string/t"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/todo"
                android:gravity="center_horizontal"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp">
                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/text_gold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_0"
                    android:layout_marginStart="30dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/text_silver"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_0"
                    android:layout_marginStart="30dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/text_bronze"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_0"
                    android:layout_marginStart="30dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/text_total"
                    android:layout_marginStart="30dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_0"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>