<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawable_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".content.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/main_page_toolbar"
            layout="@layout/toolbar_home"
            />

        <ScrollView
            android:id="@+id/content_view"
            android:layout_below="@id/main_page_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:id="@+id/vpSlider"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/colorPrimary"/>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/sliderDots"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@id/vpSlider"
                    android:padding="3dp"
                    app:centered="true"
                    app:fillColor="#df0623"
                    app:pageColor="#fff"
                    app:snap="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/medal_text"
                    android:layout_below="@id/sliderDots"
                    android:text="@string/medali"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="#98a9b7"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_view_medal"
                    android:layout_below="@id/medal_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:scrollbars="none"
                    android:layout_marginRight="8dp"
                    android:dividerHeight="0.5dp"/>

                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/more_medal"
                    android:layout_below="@id/list_view_medal"
                    android:text="@string/view_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#98a9b7"
                    />


                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/news_text"
                    android:layout_below="@id/more_medal"
                    android:text="@string/news"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#98a9b7"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_view_news"
                    android:layout_below="@id/news_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:scrollbars="none"
                    android:layout_marginRight="8dp"
                    android:dividerHeight="0.5dp"/>

                <magang_2018.aseangamesindonesianguide.customfonts.TextView_Roboto_Regular
                    android:id="@+id/more_news"
                    android:layout_below="@id/list_view_news"
                    android:text="@string/view_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#98a9b7"
                    />

                <com.google.android.gms.ads.AdView
                    android:layout_below="@id/more_news"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id">

                </com.google.android.gms.ads.AdView>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginBottom="3dp"
        android:background="@drawable/navbar"
        app:menu="@menu/item_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>